Validate values * benchmark and correct themes against debug * Complete All themes keys * Cleanups * Corrected confused text,background disabled pairs

--- a/src/config/maps/themes/basic/keys/legacy/_legacy-keys.scss
+++ b/src/config/maps/themes/basic/keys/legacy/_legacy-keys.scss
@@ -6,6 +6,7 @@
 // - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
 $theme-basic-legacy-keys: (
+        primary-on-secondary-color: $primary-on-secondary-color,
         primary-hover-on-secondary-color:$primary-hover-on-secondary-color,
         primary-selected-color-rgb: $primary-selected-color-rgb,
         primary-selected-on-secondary-color: $primary-selected-on-secondary-color,
