--- a/src/config/tokens/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/tokens/themes/black/keys/_black-theme-keys.scss
@@ -8,26 +8,32 @@
 // - When several key has the same value and have a connection
 // - We either use $theme-dark token or var(--token) depending on connection logic and value type.
 
-// primary coloring
+// Text colors
 $theme-black-primary-color: $primary-color;
 $theme-black-primary-hover-color: $primary-hover-color;
-$theme-black-primary-selected-color: $primary-selected-color;
+$theme-black-primary-selected-color: $color-ocean_blue;
 $theme-black-primary-text-color: $color-smog;
 
 $theme-black-text-color-on-primary: $text-color-on-primary;
 $theme-black-text-color-on-inverted: $color-vanta;
 
+$theme-black-secondary-text-color: $color-mouse;
+$theme-black-placeholder-color: $color-mouse;
+$theme-black-icon-color: $color-mouse;
+$theme-black-link-color: $color-arctic_blue;
+
+// Background colors
 $theme-black-primary-background-color: $color-vanta;
-$theme-black-primary-background-color-rgb: extract-rgb($color-vanta);
-
 $theme-black-primary-background-hover-color: $color-dust;
-$theme-black-primary-background-hover-on-secondary-color: $color-dust;
+$theme-black-secondary-background-color: $color-night;
 $theme-black-grey-background-color: $color-vanta;
-
+// - contrast hook
 $theme-black-inverted-color-background: $color-smog;
 
+// System Semantics (state, status)
+$theme-black-disabled-text-color: $color-dust-muted;
+$theme-black-disabled-background-color: $color-mouse-muted;
 
-// states
 $theme-black-positive-color: $positive-color;
 $theme-black-positive-color-hover: $positive-color-hover;
 $theme-black-positive-color-selected: $color-forest_green;
@@ -37,56 +43,14 @@ $theme-black-negative-color-selected: $color-maroon_red;
 $theme-black-private-color: $private-color;
 $theme-black-shareable-color: $shareable-color;
 
-// borders
+// UI elements
+// - Borders
 $theme-black-ui-border-color: $color-smoke;
-$theme-black-ui-border-on-secondary-color: $color-smoke;
 $theme-black-layout-border-color: $color-dust;
-$theme-black-layout-border-on-secondary-color: $color-dust;
 
-$theme-black-placeholder-color: $color-mouse;
-$theme-black-placeholder-color-with-opacity: rgba($color-mouse, 0.1);
-$theme-black-placeholder-on-secondary-color: $color-mouse;
-$theme-black-icon-color: $color-mouse;
-$theme-black-icon-on-secondary-color: $color-mouse;
-
-// disabled
-$theme-black-disabled-background-color: $color-mouse-muted;
-$theme-black-disabled-background-on-secondary-color: $color-mouse-muted;
-$theme-black-disabled-text-color: $color-dust-muted;
-$theme-black-disabled-text-on-secondary-color: $color-dust-muted;
-
-$theme-black-dark-background-color: $color-night;
-$theme-black-dark-background-on-secondary-color: $color-silver;
-$theme-black-secondary-background-color: $color-night;
-$theme-black-secondary-background-color-rgb: extract-rgb($color-night);
-
-//deprecated - use secondary-background-color
-$theme-black-dialog-background-color: $color-night;
-
-$theme-black-label-background-color: $color-buster_blue;
-$theme-black-label-background-on-secondary-color: $color-buster_blue;
-$theme-black-secondary-text-color: $color-mouse;
-$theme-black-secondary-text-on-secondary-color: var(--color-jaco_gray);
-$theme-black-link-color: var(--color-link_color);
-$theme-black-link-on-secondary-color: var(--color-link_color);
-
-// BLACK THEME TOKENS: SHADOWS
-// - This partial defines Basic Theme's shadow tokens
-
+// - Shadows
 $theme-black-box-shadow-color: $color-black;
 
 $theme-black-box-shadow-small: $shadow-size-small $theme-black-box-shadow-color;
 $theme-black-box-shadow-medium: $shadow-size-medium $theme-black-box-shadow-color;
 $theme-black-box-shadow-large: $shadow-size-large $theme-black-box-shadow-color;
-
-// legacy
-$theme-black-box-shadow-mediun: var(--box-shadow-medium);
-
-
-
-
-$theme-black-primary-on-secondary-color: $primary-on-secondary-color;
-$theme-black-primary-hover-on-secondary-color: $primary-hover-on-secondary-color;
-$theme-black-primary-selected-color-rgb: $primary-selected-color-rgb;
-$theme-black-primary-selected-on-secondary-color: $primary-selected-on-secondary-color;
-$theme-black-primary-text-on-secondary-color: $color-smog;
