--- a/src/debug/_debug-flags.scss
+++ b/src/debug/_debug-flags.scss
@@ -2,10 +2,21 @@
 // - Flag control debug tests: TRUE / FALSE
 // -- This is done to improve readability and to check by scopes.
 
-$debug-values:true;
+$debug-values: true;
 $debug-show-pass: false;
+$debug-show-converted:false;
+$debug-show-converted-fail: false;
 
 // Themes
-$debug-basic-theme: false;
-$debug-dark-theme: false;
-$debug-black-theme: false;
+$debug-basic-theme: true;
+$debug-dark-theme: true;
+$debug-black-theme: true;
+
+// Scopes
+$debug-palette: true;
+$debug-legacy-palette: true;
+$debug-keys: true;
+$debug-legacy-keys: true;
+
+// Example
+$debug-example-verify-vibe-keys: false;
