--- a/src/debug/_debug-value-maps.scss
+++ b/src/debug/_debug-value-maps.scss
@@ -1,6 +1,9 @@
 // DEBUG: COMPARE VALUES
 // _ This partial loads value map for debug using "debug-compare-values" Mixin
 
+// Reference map for token validation
+@import "maps/reference-vibe-keys-map";
+
 // Import BASIC THEME
 @import "maps/basic/debug-basic-theme-pallete-maps";
 @import "maps/basic/debug-basic-theme-legacy-palette-maps";
