--- a/src/debug/maps/basic/_debug-basic-theme-legacy-keys-maps.scss
+++ b/src/debug/maps/basic/_debug-basic-theme-legacy-keys-maps.scss
@@ -1,6 +1,6 @@
-
 // Values from last prod before change (manually removed other scoped)
 $debug-basic-theme-legacy-keys-map: (
+        primary-on-secondary-color: var(--color-basic_blue),
         primary-hover-on-secondary-color: var(--color-dark_blue),
         primary-selected-color-rgb: var(--color-highlight_blue-rgb),
         primary-selected-on-secondary-color: var(--color-highlight_blue),
@@ -32,11 +32,27 @@ $debug-output-basic-theme-legacy-keys: $theme-basic-legacy-keys;
 
 // Custom properties values the equal hard coded values
 $debug-basic-theme-legacy-keys-custom-props-reference: (
-        color-public:$color-live_blue,
-        color-private:$color-bazooka,
-        color-red-shadow:$color-red_shadow,
-        color-green-shadow: $color-green-shadow,
-        color-blue-links:$color-blue_links,
+);
+$debug-basic-theme-legacy-keys-custom-props-converted: (
+        primary-on-secondary-color: $primary-on-secondary-color,
+        primary-hover-on-secondary-color: $primary-hover-on-secondary-color,
+        primary-selected-color-rgb: $primary-selected-color-rgb,
+        primary-selected-on-secondary-color: $primary-selected-on-secondary-color,
+        primary-text-on-secondary-color: $primary-text-on-secondary-color,
+        text-color-on-primary-with-opacity: $text-color-on-primary-with-opacity,
+        secondary-text-on-secondary-color: $secondary-text-on-secondary-color,
+        placeholder-color-with-opacity: $placeholder-color-with-opacity,
+        placeholder-on-secondary-color: $placeholder-on-secondary-color,
+        icon-on-secondary-color: $icon-on-secondary-color,
+        link-on-secondary-color: $link-on-secondary-color,
+        label-background-color: $label-background-color,
+        label-background-on-secondary-color: $label-background-on-secondary-color,
+        primary-background-hover-on-secondary-color: $primary-background-hover-on-secondary-color,
+        modal-background-color: $modal-background-color,
+        ui-border-on-secondary-color: $ui-border-on-secondary-color,
+        dark-background-color: $dark-background-color,
+        dark-background-on-secondary-color: $dark-background-on-secondary-color,
+        dialog-background-color: $dialog-background-color,
 );
 
 // White list approved changes
