Disabled tokens fix: text-background switch, removed muted custom vars * Remove muted vars * Fix switch between text and background disabled colors in dark and black theme.

--- a/src/Themes/basic-theme.scss
+++ b/src/Themes/basic-theme.scss
@@ -46,10 +46,10 @@
   --icon-on-secondary-color: var(--color-asphalt);
 
   // disabled
-  --disabled-background-color: var(--color-ui_grey-muted);
-  --disabled-background-on-secondary-color: var(--color-ui_grey-muted);
-  --disabled-text-color: var(--color-asphalt-muted);
-  --disabled-text-on-secondary-color: var(--color-asphalt-muted);
+  --disabled-background-color: #bdbec7;
+  --disabled-background-on-secondary-color: #bdbec7;
+  --disabled-text-color: #ecedf5;
+  --disabled-text-on-secondary-color: #ecedf5;
 
   --dark-background-color: var(--color-riverstone_gray);
   --dark-background-on-secondary-color: var(--color-riverstone_gray);
