--- a/src/Themes/dark-theme.scss
+++ b/src/Themes/dark-theme.scss
@@ -44,10 +44,10 @@
   --icon-on-secondary-color: var(--color-wolf_gray);
 
   // disabled
-  --disabled-background-color: #3c3f59;
-  --disabled-background-on-secondary-color: #3c3f59;
-  --disabled-text-color: #5d6072;
-  --disabled-text-on-secondary-color: #5d6072;
+  --disabled-background-color: #5d6072;
+  --disabled-background-on-secondary-color: #5d6072;
+  --disabled-text-color: #3c3f59;
+  --disabled-text-on-secondary-color: #3c3f59;
 
   --dark-background-color: #393b53;
   --dark-background-on-secondary-color: #4b4e69;
