Change Tokens Architecture: Core and Base Theme - Add layer separation between config and definitions. - Create Config Maps setup - Create Config Tokens setup - Create Basic Theme settings. - Create Core Theme settings. - Change content colors to mixins. - Add Debug Setup - Move legacy definitions order down. - Verify values with debug and local jest.

--- a/src/_themes.scss
+++ b/src/_themes.scss
@@ -5,6 +5,7 @@
 //   - Black
 //   - Dark
 //   - Hacker
+// Loading order is important due to theme dependencies
 
 @import "Themes/basic-theme.scss";
 @import "Themes/dark-theme.scss";
