--- a/src/core/_core-settings.scss
+++ b/src/core/_core-settings.scss
@@ -1,17 +1,18 @@
-// CORE MAP : SETTINGS
+// CORE : SETTINGS
 // This partial Defines a Unified settings map for the Core Scope.
-// - Map collect function is used in order to merge multiple maps.
+// - Map collect function is used in order to merge multiple maps from Core config .
 
 $core-settings-map: map-collect(
+                $core-motion-map,
+                $core-spacing-map,
+                $core-border-radius-map,
+                $core-common-map,
                 $core-fonts-map,
                 $core-font-weight-map,
                 $core-font-size-scale-map,
                 $core-font-line-height-scale-map,
-                $core-motion-map,
-                $core-border-radius-map,
-                $core-spacing-map,
                 $core-typography-font-sizes-map,
                 $core-typography-line-height-sizes-map,
                 $core-typography-fonts-map,
-                $core-common-map
+
 );
