--- a/src/Themes/black-theme.scss
+++ b/src/Themes/black-theme.scss
@@ -16,6 +16,7 @@
   --primary-background-hover-color: #636363;
   --primary-background-hover-on-secondary-color: #636363;
   --grey-background-color: #111111;
+  --allgrey-background-color: #2c2c2c;
 
   --inverted-color-background: #eeeeee;
   --text-color-on-inverted: #111111;
