--- a/src/Themes/dark-theme.scss
+++ b/src/Themes/dark-theme.scss
@@ -16,6 +16,7 @@
   --primary-background-hover-color: #4b4e69;
   --primary-background-hover-on-secondary-color: #4b4e69;
   --grey-background-color: #181b34;
+  --allgrey-background-color: #30324e;
 
   --inverted-color-background: #ffffff;
   --text-color-on-inverted: var(--color-mud_black);
