--- a/src/Themes/hacker-theme.scss
+++ b/src/Themes/hacker-theme.scss
@@ -19,6 +19,7 @@ $primary_color: #fe78c6;
   --primary-background-hover-color: #4b4e69;
   --primary-background-hover-on-secondary-color: #4b4e69;
   --grey-background-color: #{$bg_color};
+  --allgrey-background-color: #{$bg_color};
 
   --inverted-color-background: #ffffff;
   --text-color-on-inverted: var(--color-mud_black);
