--- a/src/_debug-values.scss
+++ b/src/_debug-values.scss
@@ -45,7 +45,7 @@
               $custom-props-values: $debug-basic-theme-custom-props-reference,
               $custom-props-converted: $debug-basic-theme-keys-custom-props-converted,
               $white-list: $debug-basic-theme-white-list,
-              $reference-key-map: $debug-basic-theme-keys-map,
+              $reference-key-map: $reference-vibe-keys-map,
               $title: "🔑 theme key values",
               $scope: "basic theme keys",
       );
