--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -19,6 +19,7 @@ $theme-basic-keys: (
         primary-background-hover-color: $primary-background-hover-color,
         secondary-background-color:$secondary-background-color,
         grey-background-color:$grey-background-color,
+        allgrey-background-color: $allgrey-background-color,
         inverted-color-background: $inverted-color-background,
         disabled-background-color: $disabled-background-color,
         disabled-text-color: $disabled-text-color,
