--- a/src/debug/_debug-flags.scss
+++ b/src/debug/_debug-flags.scss
@@ -2,10 +2,10 @@
 // - Flag control debug tests: TRUE / FALSE
 // -- This is done to improve readability and to check by scopes.
 
-$debug-values: false;
+$debug-values: true;
 $debug-show-pass: false;
-$debug-show-converted:false;
-$debug-show-converted-fail: false;
+$debug-show-converted: false;
+$debug-show-converted-fail: true;
 
 // Themes
 $debug-basic-theme: true;
