--- a/src/debug/maps/basic/_debug-basic-theme-keys-maps.scss
+++ b/src/debug/maps/basic/_debug-basic-theme-keys-maps.scss
@@ -14,6 +14,7 @@ $debug-basic-theme-keys-map: (
         primary-background-hover-color: var(--color-ui_grey),
         secondary-background-color: var(--color-snow_white),
         grey-background-color: var(--color-riverstone_gray),
+        allgrey-background-color: var(--color-riverstone_gray),
         inverted-color-background: var(--color-mud_black),
         disabled-text-color: var(--color-asphalt-muted),
         disabled-background-color: var(--color-ui_grey-muted),
@@ -51,6 +52,7 @@ $debug-basic-theme-keys-custom-props-converted: (
         primary-background-hover-color: $primary-background-hover-color,
         secondary-background-color:$secondary-background-color,
         grey-background-color: $grey-background-color,
+        allgrey-background-color: $allgrey-background-color,
         inverted-color-background: $inverted-color-background,
         positive-color-selected: $positive-color-selected,
         positive-color: $positive-color,
