Turn off debug flag

--- a/src/debug/_debug-flags.scss
+++ b/src/debug/_debug-flags.scss
@@ -2,7 +2,7 @@
 // - Flag control debug tests: TRUE / FALSE
 // -- This is done to improve readability and to check by scopes.
 
-$debug-values: true;
+$debug-values: false;
 $debug-show-pass: false;
 $debug-show-converted: false;
 $debug-show-converted-fail: true;
