Disabled tokens fix: text-background switch

--- a/src/Themes/dark-theme.scss
+++ b/src/Themes/dark-theme.scss
@@ -45,10 +45,10 @@
   --icon-on-secondary-color: var(--color-wolf_gray);
 
   // disabled
-  --disabled-background-color: #5d6072;
-  --disabled-background-on-secondary-color: #5d6072;
-  --disabled-text-color: #3c3f59;
-  --disabled-text-on-secondary-color: #3c3f59;
+  --disabled-background-color: #3c3f59;
+  --disabled-background-on-secondary-color: #3c3f59;
+  --disabled-text-color: #5d6072;
+  --disabled-text-on-secondary-color: #5d6072;
 
   --dark-background-color: #393b53;
   --dark-background-on-secondary-color: #4b4e69;
@@ -217,50 +217,50 @@
   --color-brown-hover: #684943;
   --color-brown-selected: #4d3941;
 
-   // Orchid
-   --color-orchid: #E190C0;
-   --color-orchid-hover: #B4739A;
-   --color-orchid-selected: #B4739A;
-   
-   // Tan
-   --color-tan: #BDAB95;
-   --color-tan-hover: #978977;
-   --color-tan-selected: #716863;
-   
-   // Sky
-   --color-sky: #B4E9F8;
-   --color-sky-hover: #90BAC6;
-   --color-sky-selected: #6C8A9A;
-   
-   // Coffee
-   --color-coffee: #CA9A8B;
-   --color-coffee-hover: #A27B6F;
-   --color-coffee-selected: #795E5D;
-   
-   // Royal
-   --color-royal: #5591EA;
-   --color-royal-hover: #4474BB;
-   --color-royal-selected: #375993;
- 
-   // Teal
-   --color-teal: #457B82;
-   --color-teal-hover: #376268;
-   --color-teal-selected: #2E4D58;
-   
-   // Lavender
-   --color-lavender: #CAB9FA;
-   --color-lavender-hover: #A294C8;
-   --color-lavender-selected: #85597B;
-   
-   // Steel
-   --color-steel: #BACBED;
-   --color-steel-hover: #95A2BE;
-   --color-steel-selected: #707A95;
-   
-   // Lilac
-   --color-lilac: #B1ADC7;
-   --color-lilac-hover: #8E8A9F;
-   --color-lilac-selected: #6B697F;
+  // Orchid
+  --color-orchid: #E190C0;
+  --color-orchid-hover: #B4739A;
+  --color-orchid-selected: #B4739A;
+
+  // Tan
+  --color-tan: #BDAB95;
+  --color-tan-hover: #978977;
+  --color-tan-selected: #716863;
+
+  // Sky
+  --color-sky: #B4E9F8;
+  --color-sky-hover: #90BAC6;
+  --color-sky-selected: #6C8A9A;
+
+  // Coffee
+  --color-coffee: #CA9A8B;
+  --color-coffee-hover: #A27B6F;
+  --color-coffee-selected: #795E5D;
+
+  // Royal
+  --color-royal: #5591EA;
+  --color-royal-hover: #4474BB;
+  --color-royal-selected: #375993;
+
+  // Teal
+  --color-teal: #457B82;
+  --color-teal-hover: #376268;
+  --color-teal-selected: #2E4D58;
+
+  // Lavender
+  --color-lavender: #CAB9FA;
+  --color-lavender-hover: #A294C8;
+  --color-lavender-selected: #85597B;
+
+  // Steel
+  --color-steel: #BACBED;
+  --color-steel-hover: #95A2BE;
+  --color-steel-selected: #707A95;
+
+  // Lilac
+  --color-lilac: #B1ADC7;
+  --color-lilac-hover: #8E8A9F;
+  --color-lilac-selected: #6B697F;
 
   // Pecan
   --color-pecan: #786565;
