--- a/src/Themes/basic-theme.scss
+++ b/src/Themes/basic-theme.scss
@@ -47,10 +47,10 @@
   --icon-on-secondary-color: var(--color-asphalt);
 
   // disabled
-  --disabled-background-color: #bdbec7;
-  --disabled-background-on-secondary-color: #bdbec7;
-  --disabled-text-color: #ecedf5;
-  --disabled-text-on-secondary-color: #ecedf5;
+  --disabled-background-color: #ecedf5;
+  --disabled-background-on-secondary-color: #ecedf5;
+  --disabled-text-color: #bdbec7;
+  --disabled-text-on-secondary-color: #bdbec7;
 
   --dark-background-color: var(--color-riverstone_gray);
   --dark-background-on-secondary-color: var(--color-riverstone_gray);
