--- a/src/config/tokens/themes/basic/palette/legacy/_legacy-pallete.scss
+++ b/src/config/tokens/themes/basic/palette/legacy/_legacy-pallete.scss
@@ -43,7 +43,7 @@ $color-lime-green: #9cd326;
 $color-jade: #03c875;
 $color-green-haze: #00a359;
 $color-grass-green: #037f4c; // TODO:removed when content scope is merged. manual duplication of color-grass_green.
-$color-amethyst: #a25ddc;
+$color-amethyst: $color-purple;
 $color-dark-purple: #784bd1;
 
 // Semantic candidates
