--- a/src/debug/_debug-value-maps.scss
+++ b/src/debug/_debug-value-maps.scss
@@ -9,3 +9,11 @@
 @import "maps/basic/debug-basic-theme-legacy-palette-maps";
 @import "maps/basic/debug-basic-theme-keys-maps";
 @import "maps/basic/debug-basic-theme-legacy-keys-maps";
+
+// Import DARK THEME
+@import "maps/dark/debug-dark-theme-keys-maps";
+@import "maps/dark/debug-dark-theme-legacy-keys-maps";
+
+// Import BLACK THEME
+@import "maps/black/debug-black-theme-keys-maps";
+@import "maps/black/debug-black-theme-legacy-keys-maps";
