--- a/src/debug/_debug-flags.scss
+++ b/src/debug/_debug-flags.scss
@@ -2,15 +2,15 @@
 // - Flag control debug tests: TRUE / FALSE
 // -- This is done to improve readability and to check by scopes.
 
-$debug-values: false;
-$debug-show-pass: true;
-$debug-show-converted: true;
+$debug-values: true;
+$debug-show-pass: false;
+$debug-show-converted: false;
 $debug-show-converted-fail: true;
 
 // Themes
 $debug-basic-theme: true;
-$debug-dark-theme: false;
-$debug-black-theme: false;
+$debug-dark-theme: true;
+$debug-black-theme: true;
 
 // Scopes
 $debug-palette: true;
