Add XS token to shadow scales. * Add scss keys in Core maps * Update Basic theme * Add hardcoded values within black and dark and hacker themes * Adjust tests to add shadows

--- a/src/Themes/black-theme.scss
+++ b/src/Themes/black-theme.scss
@@ -266,6 +266,7 @@
   --color-pecan-selected: #433939;
 
   // Shadows
+  --box-shadow-xs: #{$shadow-size-xs} #000000;
   --box-shadow-small: #{$shadow-size-small} #000000;
   --box-shadow-medium: #{$shadow-size-medium} #000000;
   --box-shadow-large: #{$shadow-size-large} #000000;
