--- a/src/config/tokens/core/_core-opacity.scss
+++ b/src/config/tokens/core/_core-opacity.scss
@@ -4,6 +4,7 @@
 //   - Currently they are derived from existing values.
 
 $opacity-0: 0;
+$opacity-10: 0.1;
 $opacity-20: 0.2;
 $opacity-30: 0.3;
 $opacity-40: 0.4;
