--- a/src/Themes/dark-theme.scss
+++ b/src/Themes/dark-theme.scss
@@ -268,6 +268,7 @@
   --color-pecan-selected: #4A4148;
 
   // Shadows
+  --box-shadow-xs: #{$shadow-size-xs} rgba(9, 11, 25, 0.5);
   --box-shadow-small: #{$shadow-size-small} rgba(9, 11, 25, 0.5);
   --box-shadow-medium: #{$shadow-size-medium} rgba(9, 11, 25, 0.5);
   --box-shadow-large: #{$shadow-size-large} rgba(9, 11, 25, 0.5);
