--- a/src/debug/maps/_reference-vibe-keys-map.scss
+++ b/src/debug/maps/_reference-vibe-keys-map.scss
@@ -1,4 +1,7 @@
 // DEBUG MAP: REFERENCE KEYS MAP
 // map for validating Vibe tokens
 // - Used within mixin "debug-vibe-tokens"
-$reference-vibe-keys-map: $theme-basic-keys;
+$reference-vibe-keys-map: map-collect(
+                $theme-basic-keys,
+                $theme-basic-shadow-keys
+);
